--- a/dev/refund_account/index.jade
+++ b/dev/refund_account/index.jade
@@ -21,7 +21,7 @@ block member_section
                 tr
                     td.td_key 帳戶姓名：
                     td.td_value
-                        input(type="text")
+                        input(type="text")#account_name
                 
                 tr
                     td.td_key 銀行名稱：
@@ -34,7 +34,7 @@ block member_section
                 tr
                     td.td_key 帳　　號：
                     td.td_value
-                        input(type="text")
+                        input(type="text")#account
                 
                 tr
                     td.td_key 退款金額：
@@ -50,4 +50,4 @@ block member_section
             | <br/> 106台北市大安區泰順街44巷25號1F
         p 我們將於收到您的退貨商品並審核符合退貨條件後，進行退款程
             | <br/> 序，退款的作業時間為收到退貨商品後的5個工作天，謝謝！
-        button.dialog_button#check_receive 確定
+        a.dialog_button#check_receive 確定
