--- a/dev/member_login/all.styl
+++ b/dev/member_login/all.styl
@@ -1,13 +1,16 @@
 @import "../_general/general"
 @import "../_general/login/login"
 
+#main
+    flex: 1
+    
 #main,.section_wrapper
     display: flex;
     flex-axis: center
-    flex-direction: column
 
 .section_wrapper
     //margin-top: -5%
+    flex-direction: column
     &>p
         margin-top: 29px
 //login.styl
