--- a/dev/member_register/all.styl
+++ b/dev/member_register/all.styl
@@ -11,7 +11,9 @@
 #main
     display: flex
     flex-axis:center
-    flex-direction: column
+    // flex-direction: column
+    flex: 1
+
 .register_data_section
     display: none;
 
