修正登入與註冊相容IE11的css
幹 為了IE 改超多
沒辦法 為了相容IE只好改成這樣 幫QQ

--- a/dev/_general/general.styl
+++ b/dev/_general/general.styl
@@ -64,6 +64,9 @@ $phone_rwd_width = 550px
 $tablet_rwd_width = 850px
 /**/
 $banner_max_width = 1185px
+
+$desktop_header_height = 159px
+$mobile_header_height = 67px
 /*minix*/
 
 topDownTriangle(height,width,face-color)
