--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -39,7 +39,7 @@ fixed_header()
         line-height: $nav_scrolled_height;
 
     .nav_btns
-        position: initial;
+        position: static;
     
     .child_category_wrapper
         margin-top: 29px
@@ -155,7 +155,8 @@ form.dropdown_block:after
     padding: 0 24px;
     padding-bottom: 30px;
     box-sizing: border-box;
-    height: initial;
+    //height: initial;//not compat IE11
+    height: inherit;
     top: -3px;
     z-index: 10;
     display: flex;
@@ -306,7 +307,9 @@ form.dropdown_block:after
     box-sizing: border-box
     box-shadow: 0 1px 2px 0 rgba(97,97,97,0.70)
     position: absolute
+    //top: 0
     left: -40px
+    min-width: 475px
     z-index: 10
     margin-top: 24px
     white-space: nowrap
@@ -321,6 +324,7 @@ form.dropdown_block:after
         padding-left: 10px
         padding-right: 40px
         position: relative
+        background: white
 
         >li
             padding: 8px 0
@@ -345,7 +349,8 @@ form.dropdown_block:after
 
 .more_option
     min-height: 220px
-    max-height: initial;
+    //max-height: initial;//not compat IE11
+    max-height: inherit
     
     .first_layer_triangle
             position: absolute;
@@ -420,14 +425,18 @@ form.dropdown_block:after
 
 .parent_category_list
     .child_will_attach
-        position: initial
+        //position: initial //not compat IE11
+        position: static
 .child_category_wrapper_attach_right
     right: 0;
-    left: initial;
+    //left: initial;//not compat IE11
+    left: auto
+
 
 .child_category_wrapper_attach_left
     left: 0;
-    right: initial;
+    //right: initial;//not compat IE11
+    right: auto
 
 .rwd_show
     display: none
