--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -307,7 +307,7 @@ form.dropdown_block:after
     box-sizing: border-box
     box-shadow: 0 1px 2px 0 rgba(97,97,97,0.70)
     position: absolute
-    //top: 0
+    top: 0
     left: -40px
     min-width: 475px
     z-index: 10
@@ -431,6 +431,7 @@ form.dropdown_block:after
     right: 0;
     //left: initial;//not compat IE11
     left: auto
+    top: inherit
 
 
 .child_category_wrapper_attach_left
