New page : return_product
New page : return_product (deprecate choice_ return_product)
修改refund_account (add a dialog)

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -106,7 +106,7 @@ header#header.isRWD
                 | <i class="scroll_disappear">|</i>
                 
                 span.dropdown_block_wrapper
-                    a.fa.fa-user-circle-o.small_icon(aria-hidden='true')
+                    i.fa.fa-user-circle-o.small_icon(aria-hidden='true')
 
                     ul.dropdown_block#member_panel
                         li 
