--- a/dev/refund_account/index.jade
+++ b/dev/refund_account/index.jade
@@ -36,9 +36,9 @@ block member_section
                     td.td_value
                         input(type="text")#account
                 
-                tr
-                    td.td_key 退款金額：
-                    td.td_value $ 50
+                //- tr
+                //-     td.td_key 退款金額：
+                //-     td.td_value $ 50
                 
         span.dialog_button_wrapper
             button.dialog_button.pre 上一步
@@ -47,7 +47,18 @@ block member_section
     div#dialog.do_button_dialog
         h1 退貨申請已送出
         p 退貨申請已成功送出，請將退貨商品寄回以下地址：
-            | <br/> 106台北市大安區泰順街44巷25號1F
+            | <br/> 241新北市三重區中央南路72巷14號1F
         p 我們將於收到您的退貨商品並審核符合退貨條件後，進行退款程
             | <br/> 序，退款的作業時間為收到退貨商品後的5個工作天，謝謝！
         a.dialog_button#check_receive 確定
+    
+    div#check_dialog.do_button_dialog
+        img(src="../general/img/delete.png").colse_dialog
+        img(src="./img/warning.png").warning_img
+        p 請核對
+            span.notice 退款帳戶資料
+            | 是否正確一旦送出即不可修改
+        
+        span.dialog_button_wrapper
+            button.dialog_button.dialog_cancel 取消
+            button.dialog_button.dialog_check 確定
