相容IE 改main高度的寫法
相容IE 改寫法 讓main的高度能夠在空間不足的情況下撐好撐滿

--- a/dev/_general/footer/footer.styl
+++ b/dev/_general/footer/footer.styl
@@ -11,6 +11,7 @@ $footer_rwd_width = 850px
     flex-axis: center center
     font-size: $font12
     box-sizing: border-box
+    height: $desktop_footer_height
 
 #footer_link
     display: flex
@@ -36,6 +37,9 @@ $footer_rwd_width = 850px
     margin-top: 20px;
 
 +media-query( only screen ,max-width $footer_rwd_width )
+    #footer
+        height:inherit
+        
     #footer_link
         flex-direction: column-reverse
 
