--- a/dev/forget_password/all.styl
+++ b/dev/forget_password/all.styl
@@ -2,6 +2,7 @@
 @import "../_general/login/login"
 @import "../_general/login/register_date"
 
+mainNoFooter()
 #main
     display: flex
     flex-axis:center
