--- a/dev/member_login/all.styl
+++ b/dev/member_login/all.styl
@@ -1,16 +1,8 @@
 @import "../_general/general"
 @import "../_general/login/login"
 
-/*for IE11*/
-$main_height = "100vh - "+$desktop_header_height
-#main
-    height: calc($main_height);//for IE11
+mainNoFooter()
 
-+media-query( all, max-width $phone_rwd_width )
-    #main
-        height: initial
-        flex: 1;
-/*for IE11*/
 #main,.section_wrapper
     display: flex;
     flex-axis: center
