超大更新一波
幹我不太確定我更新了什麼...
修正商品內頁下方，最近瀏覽商品跑版
修正會員註冊版面錯誤
修正購物車視窗太長無法點擊結帳按鈕的問題
新增功能：forget-password & register page生日欄位打滿就跳格
account-setting & checkout page 拿掉離島資訊
新增favorite page與js接上相關功能
home page 修正 main slide banner mobile跑版的error
order-detial page變成有三個狀態-一般訂單 退貨訂單 取消訂單
order-query page 取消訂單流程更改
大改shopping_should_know page 內容

--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -162,9 +162,14 @@ form.dropdown_block:after
     display: flex;
     flex-direction: column;
     line-height: normal
+    max-height: 600px;
+    overflow-y: auto;
+    justify-content: flex-start;
     &:before
         display: none
-
+    &>div
+        width: 100%
+        
     .shopping_cart_product
         display: flex
         align-items: center
@@ -205,7 +210,7 @@ form.dropdown_block:after
     
     
     .shopping_cart_calc
-        height: 40px
+        min-height: 40px
         padding: 10px 0
         padding-left: 43px
         box-sizing: border-box
@@ -258,12 +263,15 @@ form.dropdown_block:after
 
 #search_go
     size: 45px $search_component_height
+    line-height: $search_component_height
     background: #D6645F
     //border: 1px solid #D6645F
     color: white
     cursor: pointer
     box-sizing: border-box
     border-radius: 0
+    padding: 0;
+    
     &:active
         background: white
         color: #D6645F
@@ -328,7 +336,7 @@ form.dropdown_block:after
 
         >li
             padding: 8px 0
-            width: 230px
+            //width: 230px
             white-space: normal
 
 
@@ -336,6 +344,7 @@ form.dropdown_block:after
                 color: #D6645F
     img
         height: 170px
+        margin-left: auto
 
 .dropdown_block_active
     visibility: visible;
@@ -364,6 +373,9 @@ form.dropdown_block:after
             transition: top 0.4s ease-in-out;
 
     .child_category_list
+        //fix width to fill out the space of child_category
+        width: 230px;
+
         &:before
             content: "";
             position: absolute;
