--- a/dev/cart/all.styl
+++ b/dev/cart/all.styl
@@ -189,8 +189,8 @@
     .statistics_table
         width: 100%
 
-        span
-            margin-right: calc("100% - 300px")
+        /*span
+            margin-right: calc("100% - 300px")*/
 /*order_tables*/
 
 +media-query( all, max-width $phone_rwd_width )
