--- a/dev/finish_trade/all.styl
+++ b/dev/finish_trade/all.styl
@@ -30,6 +30,9 @@
         align-items: center
         margin-bottom: 50px
 
+#footer
+    display: none
+
 +media-query( only screen ,max-width ($phone_rwd_width) )
     .result_section
         .face
