--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -209,6 +209,7 @@ $slide_arrow_side_distance = 25px
     
     img
         height: 100%;
+        position: absolute;
 
 .slick-arrow
     position: absolute
