--- a/dev/product_intro/all.styl
+++ b/dev/product_intro/all.styl
@@ -346,3 +346,6 @@ input[type="number"]::-webkit-inner-spin-button {
 
     .product_detial
         padding: 30px
+    
+    .product_histroy
+        width: calc("100% + 20px");
