--- a/dev/shopping_should_know/index.jade
+++ b/dev/shopping_should_know/index.jade
@@ -37,7 +37,7 @@ block content
                         button.dialog_button.dialog_cancel 取消
                         button.dialog_button.dialog_check 確定
 
-        section.table_wrapper.container
+        section.table_wrapper.container#member_question
             .qa_title
                 span 如何加入會員？
                 .expand_state
