--- a/dev/member_register/all.styl
+++ b/dev/member_register/all.styl
@@ -7,6 +7,7 @@
     text-align: initial;
     padding-left: 25px;
     display: none
+    height: inherit;
 /*overrid login.styl*/
 mainNoFooter()
 
@@ -18,6 +19,10 @@ mainNoFooter()
 .register_data_section
     display: none;
 
+.notice_message
+    color: #D6645F
+    text-align: center
+    
 .reminder
     color: #D6645F
     text-align: center
