--- a/dev/member_register/index.jade
+++ b/dev/member_register/index.jade
@@ -14,9 +14,9 @@ block content
             input(type="phone" placeholder="聯絡電話" require).input_box.section_box#register_phone
             .error_message 請輸入聯絡電話
             span.input_date_wrapper
-                input(type="text" placeholder="YYYY" require).input_box.input_year#register_year
-                input(type="text" placeholder="MM" require).input_box.input_month#register_month
-                input(type="text" placeholder="DD" require).input_box.input_day#register_day
+                input(type="text" placeholder="YYYY" maxLength="4" require).input_box.input_year#register_year
+                input(type="text" placeholder="MM" maxLength="2" require).input_box.input_month#register_month
+                input(type="text" placeholder="DD" maxLength="2" require).input_box.input_day#register_day
             .error_message 請輸入生日
             .reminder.marB32 生日填寫後即不可更改，請確認生日是否填寫正確
             .reminder 按下確認就代表您已查看並同意
