--- a/dev/return_product/index.jade
+++ b/dev/return_product/index.jade
@@ -228,6 +228,7 @@ block member_section
             
             form(action)
                 input(type="hidden" name="return_note" value="")
+                input(type="hidden" name="return_items" value="")
                 input(type="hidden" name="order_id" value="")
                 input(type="hidden" name="is_defective" value="")
                 input(type="submit" value="下一步").dialog_button.next
