--- a/dev/_general/filter/filter.styl
+++ b/dev/_general/filter/filter.styl
@@ -24,6 +24,10 @@
         position: absolute;
         right: 10px;
         transform: scale(0.6);
+        /*用來置中的(Mobile)*/
+        top: 9px;
+        bottom: 9px;
+        
 
     .options
         position: absolute;
