純資料rwd-table多行跑版問題修正
修正原本的rwd-table在rwd之後顯示多行資料會跑版的問題
目前暫時不套用在有商品欄位的rwd-table , 只給純資料的rwd-table
範例在order_detail page內

--- a/dev/_general/rwd_table/rwd_table.styl
+++ b/dev/_general/rwd_table/rwd_table.styl
@@ -10,6 +10,7 @@
 
 .rwd-table th,td:before
     height: 40px
+    min-height: 40px;
     background: #F6EAE6
     color: #D6645F
     font-size: 15px
@@ -28,6 +29,18 @@
 
     td[data-th=''] 
         flex 1
+    /*目前暫時不套用在有商品欄位的rwd-table , 只給純資料的rwd-table*/
+    .td_data
+        min-height: 50px;
+        line-height: normal;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        word-break: break-word;
+        padding: 10px 0;
+        height: 100%;
+        box-sizing: border-box;
+
 +media-query( all, max-width $phone_rwd_width )
   
     .rwd-table tr
