--- a/dev/order_detail/index.jade
+++ b/dev/order_detail/index.jade
@@ -135,19 +135,31 @@ block member_section
                         th 包裹追蹤碼
                 tbody
                     tr
-                        td(data-th='姓名') 盧曉筱
-                        td(data-th='電話') 2017/02/03 12:21
-                        td(data-th='送貨方式') 超商取貨付款
-                        td(data-th='取貨門市名稱') 龍泉門市
-                        td(data-th='門市地址') 台北市大安區龍泉街20號
-                        td(data-th='包裹追蹤碼') 12d124455
+                        td(data-th='姓名') 
+                            span.td_data 盧曉筱
+                        td(data-th='電話') 
+                            span.td_data 2017/02/03 12:21
+                        td(data-th='送貨方式') 
+                            span.td_data 超商取貨付款
+                        td(data-th='取貨門市名稱')
+                            span.td_data 龍泉門市
+                        td(data-th='門市地址')
+                            span.td_data 台北市大安區龍泉街20號
+                        td(data-th='包裹追蹤碼')
+                            span.td_data 12d124455
                     tr
-                        td(data-th='姓名') 盧曉筱
-                        td(data-th='電話') 2017/02/03 12:21
-                        td(data-th='送貨方式') 超商取貨付款
-                        td(data-th='取貨門市名稱') 龍泉門市
-                        td(data-th='門市地址') 台北市大安區龍泉街20號
-                        td(data-th='包裹追蹤碼') 12d124455
+                        td(data-th='姓名') 
+                            span.td_data 盧曉筱
+                        td(data-th='電話') 
+                            span.td_data 2017/02/03 12:21
+                        td(data-th='送貨方式') 
+                            span.td_data 超商取貨付款
+                        td(data-th='取貨門市名稱')
+                            span.td_data 龍泉門市
+                        td(data-th='門市地址')
+                            span.td_data 台北市大安區龍泉街20號
+                        td(data-th='包裹追蹤碼')
+                            span.td_data 12d124455
 
         .section_title 取消明細
             hr.split
@@ -165,15 +177,22 @@ block member_section
                 tbody
                     tr
                         
-                        td(data-th='訂單取消時間') 2017/02/03 12:21
-                        td(data-th='取消原因') 下錯商品
-                        td(data-th='退款方式') 信用卡刷退
-                        td(data-th='退款金額') $ 2,870
+                        td(data-th='訂單取消時間') 
+                            span.td_data 2017/02/03 12:21
+                        td(data-th='取消原因')
+                            span.td_data 下錯商品
+                        td(data-th='退款方式')
+                            span.td_data 信用卡刷退
+                        td(data-th='退款金額')
+                            span.td_data $ 2,870
                         td(data-th='退款時間')
-                        
-                        td(data-th='退款戶名') 盧曉筱
-                        td(data-th='銀行名稱') 國泰世華-013
-                        td(data-th='銀行帳號') 1534534354534
+                            span.td_data -
+                        td(data-th='退款戶名')
+                            span.td_data 盧曉筱
+                        td(data-th='銀行名稱')
+                            span.td_data 國泰世華-013
+                        td(data-th='銀行帳號')
+                            span.td_data 1534534354534
                         td(data-th='') 
                         
                         //-要湊滿6個QQ
@@ -184,7 +203,9 @@ block member_section
             table.shop_note.rwd-table
                 tbody
                     tr    
-                        td(data-th='2017/02/03 12:21') 已確定更改送貨地址！
+                        td(data-th='2017/02/03 12:21')
+                            span.td_data 已確定更改送貨地址！
                         
                     tr    
-                        td(data-th='2017/02/03 12:21') 已確定更改送貨地址！
+                        td(data-th='2017/02/03 12:21')
+                            span.td_data 已確定更改送貨地址！
