--- a/dev/member_register/all.styl
+++ b/dev/member_register/all.styl
@@ -8,6 +8,10 @@
     padding-left: 25px;
     display: none
     height: inherit;
++media-query( all, max-width $phone_rwd_width )
+    .error_message
+        padding: 0 24px;
+
 /*overrid login.styl*/
 mainNoFooter()
 
@@ -78,6 +82,5 @@ mainNoFooter()
         max-width: calc("100vw - 20px");
 
 /*dialig*/
-
     
 
