申請退貨popup增加顯示驗證radio dot通過與否
申請退貨popup增加顯示驗證radio dot通過與否

--- a/dev/order_query/all.styl
+++ b/dev/order_query/all.styl
@@ -134,9 +134,12 @@
 
         label
             margin-left: 10px
-
-    .dialog_button_wrapper
-        margin-top: 45px
+    .notice
+        font-size: 15px
+        visibility: hidden
+        margin: 14px 0
+    //.dialog_button_wrapper
+       //margin-top: 45px
 +media-query( all, max-width $phone_rwd_width )
     #cancel_order_dialog,#apply_return_dialog,#cancel_orde_success_dialog
         padding: 31px;
