--- a/dev/order_query/index.jade
+++ b/dev/order_query/index.jade
@@ -148,7 +148,7 @@ block member_section
         div.radio_button_wrapper
             input(type="radio" name="know")#user_check_know
             label(for="user_check_know") 我已詳盡閱讀退貨須知，並確認進行退貨程序。
-        
+        p.notice 請勾選已閱讀退貨須知
         span.dialog_button_wrapper
             button.dialog_button.dialog_cancel 取消
             form(action)
