--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -100,8 +100,15 @@ header
 .dropdown_block_wrapper>.fa
     padding-bottom: 16px;
 
+//search hover panel
 #search_button+.dropdown_block
     min-width: 205px;
+    top: -3px
+
+//member hover panel
+#member_panel
+    min-width: 330px
+    top: -1px
 
 .dropdown_block
     background: white
@@ -111,6 +118,7 @@ header
     box-sizing: border-box
     box-shadow: 0 2px 4px 0 #F0E1DB
     position: absolute
+    top: 0
     white-space: nowrap
     margin-top: 34px
     height: 40px
