--- a/dev/_general/steps/steps.styl
+++ b/dev/_general/steps/steps.styl
@@ -49,7 +49,9 @@
         .circle_num
             height: 43px
             width: 43px
-            border: 16px solid white;
+            //border: 16px solid white;
+            box-shadow: 0 0 0 16px #fff;
+            margin: 16px;
             border-radius: 50%
             background: #D5948E
             display: flex
@@ -100,7 +102,8 @@
                 width: 34px
                 height: 34px
                 font-size: 15px
-                border: 6px solid white;
+                box-shadow: 0 0 0 6px #fff;
+                //border: 6px solid white;
 
             .circle_text
                 font-size: 12px
