--- a/dev/about/all.styl
+++ b/dev/about/all.styl
@@ -33,6 +33,8 @@
         letter-spacing: 0.47px;
         line-height: 1.5;
         text-align: justify;
+        //for IE11
+        max-width: inherit;
 
 
 +media-query( all, max-width $phone_rwd_width )
