--- a/dev/product_intro/all.styl
+++ b/dev/product_intro/all.styl
@@ -31,6 +31,7 @@ $product_big_photo_rwd_height = 318px
     display: flex
     &>section
         display: flex
+        flex: 1 0 auto
 
 #product_photo_list
     size: 85px $product_big_photo_height
